# imdb_scraper

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
imdb/imdb/: middlewares.py  pipelines.py  settings.py
imdb/imdb/spiders/: imdb_scraper.py
